# shellcast

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  config.example.toml  shell.nix
.github/workflows/: release.yml
src/: actions.rs  app.rs  browse.rs  chapters.rs  config.rs  feed.rs  keybindings.rs  main.rs  persistence.rs  playback.rs  theme.rs  ui.rs
