[package]
name = "shellcast"
version = "20251121"
edition = "2024"

[dependencies]
atom_syndication = "0.12.7"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rodio = { version = "0.21.1", features = ["symphonia-all"] }
rss = { version = "2.0.12", features = ["atom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
urlencoding = "2.1.3"
