[package]
name = "shellcast"
version = "0.1.0"
edition = "2021"
authors = ["Jake Goldsborough <github@pancakes.email>"]
description = "A terminal-based podcast player with discovery, playback controls, chapters, and theming"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ducks/shellcast"
homepage = "https://github.com/ducks/shellcast"
readme = "README.md"
keywords = ["podcast", "audio", "tui", "terminal", "rss"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
atom_syndication = "0.12.7"
crossterm = "0.29.0"
dirs = "6.0.0"
html2text = "0.12.6"
id3 = "1.14"
log = "0.4.22"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rodio = { version = "0.21.1", features = ["symphonia-all"] }
rss = { version = "2.0.12", features = ["atom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simplelog = "0.12.2"
tempfile = "3.23.0"
toml = "0.8.19"
urlencoding = "2.1.3"
